--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "solidity.compileUsingRemoteVersion": "v0.5.0+commit.1d4f565a",
     "slither.solcPath": "",
-    "slither.hiddenDetectors": []
+    "slither.hiddenDetectors": [],
+    "cSpell.enableFiletypes": [
+        "solidity"
+    ]
 }
