Deploy app token

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "slither.hiddenDetectors": [],
     "cSpell.enableFiletypes": [
         "solidity"
-    ]
+    ],
+    "solidity.defaultCompiler": "remote"
 }
