--- a/nginx.conf
+++ b/nginx.conf
@@ -15,4 +15,9 @@ server {
                 proxy_pass http://nodebackend:8080;
         }
 
+        location ~ /.well-known/acme-challenge {
+                allow all;
+                root /var/www/html;
+        }
+
 }
