--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
         server_name 3.15.204.222;
 
         location / {
-                proxy_pass http://nodebackend:8080;
+                proxy_pass http://nodebackend;
         }
 
         location ~ /.well-known/acme-challenge {
