--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -53,7 +53,7 @@ server {
         }
 
         location @nodejs {
-                proxy_pass http://nodejs:8080;
+                proxy_pass http://nodebackend;
                 add_header X-Frame-Options "SAMEORIGIN" always;
                 add_header X-XSS-Protection "1; mode=block" always;
                 add_header X-Content-Type-Options "nosniff" always;
