--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,13 +11,13 @@ server {
 
         server_name token.chats.cash;
 
-        location / {
-                proxy_pass http://nodebackend;
+        location ~ /.well-known/acme-challenge {
+                        allow all;
+                        root /var/www/html;
         }
 
-        location ~ /.well-known/acme-challenge {
-                allow all;
-                root /var/www/html;
+        location / {
+                        rewrite ^ https://$host$request_uri? permanent;
         }
 
 }
@@ -52,7 +52,7 @@ server {
                 try_files $uri @nodebackend;
         }
 
-        location @nodejs {
+        location @nodebackend {
                 proxy_pass http://nodebackend;
                 add_header X-Frame-Options "SAMEORIGIN" always;
                 add_header X-XSS-Protection "1; mode=block" always;
