--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443"
+      # - "443:443"
     volumes:
       - web-root:/var/www/html
       - ./nginx:/etc/nginx/conf.d
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
-      - dhparam:/etc/ssl/certs
+      # - dhparam:/etc/ssl/certs
     depends_on:
       - token-app
     networks:
@@ -28,7 +28,8 @@ services:
       - web-root:/var/www/html
     depends_on:
       - webserver
-    command: certonly --webroot --webroot-path=/var/www/html --email support@convexity.com --agree-tos --no-eff-email --force-renewal -d token.chats.cash
+      command: certonly --webroot --webroot-path=/var/www/html --email support@convexity.com --agree-tos --no-eff-email --staging -d token.chats.cash
+    # command: certonly --webroot --webroot-path=/var/www/html --email support@convexity.com --agree-tos --no-eff-email --force-renewal -d token.chats.cash
     # command: certonly --noninteractive --keep-until-expiring --webroot --webroot-path=/var/www/html --email support@convexity.com --agree-tos --no-eff-email -d token.chats.cash
 
   token-app:
@@ -45,7 +46,6 @@ services:
 networks:
   gateway:
     driver: bridge
-    name: gateway
 
 volumes:
   certbot-etc:
@@ -56,9 +56,9 @@ volumes:
       type: none
       device: /home/ubuntu/token-chats/views/
       o: bind
-  dhparam:
-    driver: local
-    driver_opts:
-      type: none
-      device: /home/ubuntu/token-chats/dhparam/
-      o: bind
+  # dhparam:
+  #   driver: local
+  #   driver_opts:
+  #     type: none
+  #     device: /home/ubuntu/token-chats/dhparam/
+  #     o: bind
