--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     depends_on:
       - webserver
     # command: certonly --webroot --webroot-path=/var/www/html --email support@convexity.com --agree-tos --no-eff-email --staging -d token.chats.cash
-    command: certonly --webroot --webroot-path=/var/www/html --email support@convexity.com --agree-tos --no-eff-email --force-renewal -d token.chats.cash
+    command: certonly --webroot --webroot-path=/var/www/html --email support@convexity.com --agree-tos --no-eff-email -d token.chats.cash
     # command: certonly --noninteractive --keep-until-expiring --webroot --webroot-path=/var/www/html --email support@convexity.com --agree-tos --no-eff-email -d token.chats.cash
 
   token-app:
