--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,26 @@ upstream nodebackend {
     server token-app:3000;
 }
 
+server {
+        listen 80;
+        listen [::]:80;
+
+        root /var/www/html;
+        index index.html index.htm index.nginx-debian.html;
+
+        server_name token.chats.cash;
+
+        location ~ /.well-known/acme-challenge {
+                allow all;
+                root /var/www/html;
+        }
+
+        location / {
+                # proxy_pass http://token-app:3000;
+                rewrite ^ https://$host$request_uri? permanent;
+        }
+
+}
 
 
 server {
