--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,5 +60,5 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /home/ubuntu/token-chats/dhparam:/var/lib/docker/volumes/token-chats_dhparam/_data
+      device: /home/ubuntu/token-chats/dhparam/
       o: bind
