--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "helmet": "^4.1.1",
     "ipfs-http-client": "^47.0.1",
     "latest": "^0.2.0",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.0"
+
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^4.1.4"
   },
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
