--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "helmet": "^4.1.1",
     "ipfs-http-client": "^47.0.1",
     "latest": "^0.2.0",
-    "morgan": "^1.10.0"
-
+    "morgan": "^1.10.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16",
