--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-    "solidity.compileUsingRemoteVersion": "v0.5.0+commit.1d4f565a",
+    "solidity.compileUsingRemoteVersion": "v0.8.0+commit.c7dfd78e",
     "slither.solcPath": "",
     "slither.hiddenDetectors": [],
     "cSpell.enableFiletypes": [
         "solidity"
     ],
-    "solidity.defaultCompiler": "remote"
+    "solidity.defaultCompiler": "localFile"
 }
