--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "test": "test"
   },
   "dependencies": {
-    
+    "@ethereumjs/common": "^2.6.5",
+    "@ethereumjs/tx": "^3.5.2",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@openzeppelin/upgrades": "^2.8.0",
     "@truffle/hdwallet-provider": "^2.0.9",
     "bl": "^4.0.3",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "defender-relay-client": "^1.24.0",
     "dotenv": "^8.2.0",
+    "eth-permit": "^0.2.1",
     "ethers": "^5.4.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
@@ -31,6 +31,9 @@
   "devDependencies": {
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts": "^4.6.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "hardhat": "^2.10.2",
     "nodemon": "^2.0.16",
     "swagger": "^0.0.1",
     "swagger-ui-express": "^4.1.4"
