--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,18 @@ services:
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
+  token-app-staging:
+    container_name: token-app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 3001:3001
+    networks:
+      - gateway
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
 
 networks:
   gateway:
