--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - deploy
+  - production
 
 before_script:
   - eval $(ssh-agent -s)
@@ -9,7 +10,20 @@ before_script:
 deploy_staging:
   stage: deploy
   script:
-    - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose build token-app && docker-compose up --force-recreate --no-deps -d && exit"
+  - eval $(ssh-agent -s)
+  - chmod 600 $SSH_PRIVATE_KEY
+  - ssh-add $SSH_PRIVATE_KEY
+    - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats-staging && git fetch && git reset --hard origin/develop && git pull origin master && docker-compose build token-app-staging && docker-compose up --force-recreate --no-deps -d && exit"
     # - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/convexityApps && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose build token-app && docker-compose up -d && chmod +x ssl_renew.sh && exit"
+  only:
+    - develop
+
+deploy_production:
+  stage: production
+  script:
+  - eval $(ssh-agent -s)
+  - chmod 600 $SSH_PRIVATE_KEY
+  - ssh-add $SSH_PRIVATE_KEY
+    - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose build token-app && docker-compose up --force-recreate --no-deps -d && exit"
   only:
     - master
