--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,10 @@ stages:
   - deploy
   - production
 
-before_script:
-  - eval $(ssh-agent -s)
-  - chmod 600 $SSH_PRIVATE_KEY
-  - ssh-add $SSH_PRIVATE_KEY
+# before_script:
+#   - eval $(ssh-agent -s)
+#   - chmod 600 $SSH_PRIVATE_KEY
+#   - ssh-add $SSH_PRIVATE_KEY
 
 deploy_staging:
   stage: deploy
