--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,18 +2,15 @@ stages:
   - deploy
   - production
 
-# before_script:
-#   - eval $(ssh-agent -s)
-#   - chmod 600 $SSH_PRIVATE_KEY
-#   - ssh-add $SSH_PRIVATE_KEY
+before_script:
+  - eval $(ssh-agent -s)
+  - chmod 600 $SSH_PRIVATE_KEY
+  - ssh-add $SSH_PRIVATE_KEY
 
 deploy_staging:
   stage: deploy
   script:
-  - eval $(ssh-agent -s)
-  - chmod 600 $SSH_PRIVATE_KEY
-  - ssh-add $SSH_PRIVATE_KEY
-    - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats-staging && git fetch && git reset --hard origin/develop && git pull origin master && docker-compose build token-app-staging && docker-compose up --force-recreate --no-deps -d && exit"
+  - ssh $USER@$APP_URL_STAGING -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats-staging && git fetch && git reset --hard origin/develop && git pull origin master && docker-compose build token-app-staging && docker-compose up --force-recreate --no-deps -d && exit"
     # - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/convexityApps && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose build token-app && docker-compose up -d && chmod +x ssl_renew.sh && exit"
   only:
     - develop
@@ -21,9 +18,6 @@ deploy_staging:
 deploy_production:
   stage: production
   script:
-  - eval $(ssh-agent -s)
-  - chmod 600 $SSH_PRIVATE_KEY
-  - ssh-add $SSH_PRIVATE_KEY
-    - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose build token-app && docker-compose up --force-recreate --no-deps -d && exit"
+  - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose build token-app && docker-compose up --force-recreate --no-deps -d && exit"
   only:
     - master
