--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,6 @@ deploy_staging:
 deploy_production:
   stage: production
   script:
-    - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose build token-app && docker-compose up token-app --force-recreate --no-deps -d && exit"
+    - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose -f docker-compose.prod.yml up --build -d && exit"
   only:
     - master
