--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@ethereumjs/common": "^2.6.5",
     "@ethereumjs/tx": "^3.5.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@openzeppelin/upgrades": "^2.8.0",
     "@truffle/hdwallet-provider": "^2.0.9",
@@ -29,11 +30,13 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/hardhat-upgrades": "^1.21.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "hardhat": "^2.10.2",
+    "hardhat": "^2.11.2",
     "nodemon": "^2.0.16",
     "swagger": "^0.0.1",
     "swagger-ui-express": "^4.1.4"
