--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,4 +19,4 @@ deploy_production:
   script:
     - ssh $USER@$APP_URL -o StrictHostKeyChecking=no ". ssh-restart.sh && ssh-add .ssh/id_rsa && cd token-chats && git fetch && git reset --hard origin/master && git pull origin master && docker-compose -f docker-compose.prod.yml up --build -d && exit"
   only:
-    - master
+    - production
