--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@ethereumjs/common": "^2.6.5",
     "@ethereumjs/tx": "^3.5.2",
+    "@ethersproject/experimental": "^5.7.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
