--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ethers": "^5.4.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "hardhat": "^2.12.0",
     "helmet": "^4.1.1",
     "ipfs-http-client": "^47.0.1",
     "latest": "^0.2.0",
